--- a/Lab1/lab1.ipynb
+++ b/Lab1/lab1.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -129,19 +129,19 @@
      "output_type": "stream",
      "text": [
       "Moc sygnału s1 obliczona bezpośrednio: 14\n",
-      "Moc sygnału s1 obliczona z fft: 56.0\n",
+      "Moc sygnału s1 obliczona z fft: 14.0\n",
       "Moc sygnału s2 obliczona bezpośrednio: 10\n",
-      "Moc sygnału s2 obliczona z fft: 40.0\n"
+      "Moc sygnału s2 obliczona z fft: 10.0\n"
      ]
     }
    ],
    "source": [
     "\n",
     "print(f\"Moc sygnału s1 obliczona bezpośrednio: {np.sum(np.square(s1))}\")\n",
-    "print(f\"Moc sygnału s1 obliczona z fft: {np.sum(np.square(np.abs(s1_fft)))}\")\n",
+    "print(f\"Moc sygnału s1 obliczona z fft: {np.sum(np.square(np.abs(s1_fft)))/4}\")\n",
     "\n",
     "print(f\"Moc sygnału s2 obliczona bezpośrednio: {np.sum(np.square(s2))}\")\n",
-    "print(f\"Moc sygnału s2 obliczona z fft: {np.sum(np.square(np.abs(s2_fft)))}\")\n"
+    "print(f\"Moc sygnału s2 obliczona z fft: {np.sum(np.square(np.abs(s2_fft)))/4}\")\n"
    ]
   },
   {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dodanie zer powoduje, że zwiększa się liczba punktów w których obliczana jest FFT, dlatego wykresy są badziej szczegółowe."
+    "Dodanie zer powoduje, że zwiększa się liczba punktów w których obliczana jest FFT, dlatego wykresy widm są badziej szczegółowe."
    ]
   },
   {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dla N=2048 występuje zjawisko przecieku widma. Okres sygnału to NWD(5000Hz,6000Hz,11000Hz) = 1000Hz, a czestotliwość próbkowania to 48000Hz, więc sygnał powinien się powtarzać co 48 próbek. Liczba próbek powinna być więc podzielna przez 48 (np. 3072), żeby efekt nie występował."
+    "Dla N=2048 występuje zjawisko przecieku widma. NWD(5000Hz,6000Hz,11000Hz) = 1000Hz, a czestotliwość próbkowania to 48000Hz, więc sygnał powinien się powtarzać co 48 próbek. Liczba próbek powinna być więc podzielna przez 48 (np. N=3072), żeby efekt nie występował."
    ]
   }
  ],
